2005-05-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (get_bound_info): remove warning.

	* lily/staff-symbol-engraver.cc (process_music): start initial
	spanner in process_music(). This fixes overrides of StaffSymbol
	properties.

	* scm/framework-pdf.scm (Module): remove.

	* Documentation/topdocs/AUTHORS.texi (AUTHORS): clean up, update.

	* lily/ambitus-engraver.cc: formatting cleanups.

	* mf/feta-solfa.mf (Module): remove.

	* ChangeLog: more details about contributions.

2005-05-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/align-interface.cc (align_elements_to_extents): warn if
	called too early. Fixes: disappearing-staff-lines.ly

	* VERSION (PACKAGE_NAME): release 2.5.24

2005-05-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/string.cc (substitute): Take two strings or two
	characters.  Update callers.

2005-05-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-name.cc (File_name): Slashify.

	* scm/lily.scm: Use gui-main iso lilypond-main on MINGW.

	* scripts/GNUmakefile (SEXECUTABLES): Add lilypond-invoke-editor.

	* stepmake/aclocal.m4 (STEPMAKE_WINDOWS): New function.

	* configure.in (gui_b): Use it.

	* lily/lilypond.rc.in: New file.

	* lily/GNUmakefile[PLATFROM_WINDOWS]: Compile it into executable.

2005-05-12  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/advanced-notation.itely: edit of Text
	section; clarify text scripts vs. text markup.

2005-05-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/multi-measure-rest-engraver.cc
	(Multi_measure_rest_engraver): init bar_seen_ to true. Notice
	separation items on start. Fixes mm rests in start of score.

	* lily/slur-scoring.cc (move_away_from_staffline): robustness,
	don't access StaffSymbol if not there.
	Fixes: crash-staff-symbol-engraver.ly.

	* lily/instrument-name-engraver.cc (class
	Instrument_name_engraver): data member first_. Create
	InstrumentName on start. 

2005-05-12  Graham Percival  <gperlist@shaw.ca>
